Removed unecessary boostrap files. Fixed title and CTA button vertical alignment (editing materialize.css). Edited card tab color in materialize.css.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,7 @@ p, .collapsible-header, .collection .collection-item {
 /* The hero image */
 .hero-image-1 {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.10)), url("/assets/images/hero/WhatsApp Image 2019-01-13 at 11.51.42.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.35)), url("/assets/images/hero/WhatsApp Image 2019-01-13 at 11.51.42.jpg");
 
   /* Set a specific height */
   height: 60%;
@@ -43,7 +43,7 @@ p, .collapsible-header, .collection .collection-item {
 /* The hero image */
 .hero-image-2 {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.10)), url("/assets/images/hero/laos-luang-prabang-night-market-temple-photo-by-cyril-eberle-CEB_3892.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.35)), url("/assets/images/hero/laos-luang-prabang-night-market-temple-photo-by-cyril-eberle-CEB_3892.jpg");
 
     /* Set a specific height */
     height: 60%;
@@ -58,7 +58,7 @@ p, .collapsible-header, .collection .collection-item {
 /* The hero image */
 .hero-image-3 {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.10)), url("/assets/images/hero/laos-luang-prabang-tat-kuang-si-waterfall-photo-by-cyril-eberle-CEB_4304_.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.35)), url("/assets/images/hero/laos-luang-prabang-tat-kuang-si-waterfall-photo-by-cyril-eberle-CEB_4304_.jpg");
 
     /* Set a specific height */
     height: 60%;
@@ -73,7 +73,7 @@ p, .collapsible-header, .collection .collection-item {
   /* The hero image */
 .hero-image-4 {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.10)), url("/assets/images/hero/laos-luang-prabang-pak-ou-cave-tiger-trail-photo-by-cyril-eberle-CEB_2563.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.35)), url("/assets/images/hero/laos-luang-prabang-pak-ou-cave-tiger-trail-photo-by-cyril-eberle-CEB_2563.jpg");
 
     /* Set a specific height */
     height: 60%;
@@ -88,7 +88,7 @@ p, .collapsible-header, .collection .collection-item {
   /* The hero image */
 .hero-image-5 {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.10)), url("/assets/images/hero/balcon2820.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.35)), url("/assets/images/hero/balcon2820.jpg");
 
     /* Set a specific height */
     height: 60%;
@@ -103,7 +103,7 @@ p, .collapsible-header, .collection .collection-item {
   /* The hero image */
 .hero-image-6 {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.45)), url("/assets/images/hero/Luang_Prabang_Laos_Photo_by_Cyril_Eberle_IMG_9092.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.35)), url("/assets/images/hero/Luang_Prabang_Laos_Photo_by_Cyril_Eberle_IMG_9092.jpg");
 
     /* Set a specific height */
     height: 60%;
